# scrollkeeper

./: .gitignore  Main.hs  README.md  project.nix  sample.data  scrollkeeper.cabal
Scrollkeeper/: Extras.hs  Runners.hs  Types.hs
src/: Corpus.hs  Main.hs  Types.hs  World.hs
